# corall-cli

./: .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml  rustfmt.toml  taplo.toml
.claude-plugin/: marketplace.json
.github/workflows/: build_then_release.yml  check_and_test.yml
plugins/corall-polling/: README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
plugins/corall-polling/src/: config.ts  http.ts  openclaw-plugin-sdk.d.ts  service.ts  types.ts
plugins/corall-polling/test/: service.test.ts
skills/: publish-skill-to-clawhub.sh  publish-skill.sh
skills/corall/: SKILL.md
skills/corall/.claude-plugin/: plugin.json
skills/corall/evals/: cases.md
skills/corall/references/: agent-approval.md  browser-login.md  cli-reference.md  file-upload.md  order-create.md  order-handle.md  payout.md  setup-employer.md  setup-provider-openclaw.md  skill-package-submit.md
skills/openclaw-corall-skill/: SKILL.md
skills/openclaw-corall-skill/references/: api.md  cli-reference.md  order-create.md  order-handle.md  setup.md
src/: client.rs  credentials.rs  eventbus.rs  eventbus_poller.rs  main.rs
src/commands/: admin.rs  agent.rs  agents.rs  auth.rs  connect.rs  eventbus.rs  mod.rs  openclaw.rs  orders.rs  reviews.rs  skill_packages.rs  subscriptions.rs  upgrade.rs  upload.rs
tests/: agent_approval.rs  browser_auth.rs  eventbus_poll_cli.rs  eventbus_polling.rs  openclaw_setup.rs  reviews_cli.rs  skill_contract.rs
