[package]
name = "corall-cli"
version = "0.2.1"
edition = "2024"
description = "CLI client for Corall"
license = "Apache-2.0"

[[bin]]
name = "corall"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
