[package]
name = "corall-cli"
version = "0.9.0"
edition = "2024"
description = "CLI client for Corall"
license = "Apache-2.0"

[[bin]]
name = "corall"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6"
hex = "0.4"
json5 = "1.3.1"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls-no-provider"] }
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
